# Lit-Engine

./: .clang-format  .gitignore  .gitmodules  2windows copy.cpp  2windows.cpp  B  CMakeLists.txt  CONTRIBUTING.md  CREDITS.md  CodeEditor.cpp  EditorCamera.cpp  Engine.cpp  EntitiesList.cpp  GUI.cpp  Inspector.cpp  LICENSE  Makefile  NodeEditor.json  README.md  README.txt  ScriptData.h  a.out  a.py  build_dependencies.sh  custom.fs  custom.vs  do_tests copy 2.cpp  do_tests copy.cpp  do_tests.cpp  encrypted.txt  folder_test.cpp  globals.h  hi.cpp  imgui.ini  include_all.h  include_all_static.h  include_all_tests.h  install.bat  install.sh  install_dependencies.sh  (+54 more)
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md  feature_request.md
.github/workflows/: ci.yml
.profile/: plugins.json
.profile/plugins/Plugin1/: main.py
Assets/: materials.json
Engine/: Core.cpp  Core.h  Engine copy.cpp  Engine.cpp  Engine.h  Engine.hpp  RunGame.cpp  RunGame.h  SaveLoad.cpp  functions.cpp  functions.h  global_variables.cpp  hi.py  include_all.h  lights.cpp  main.cpp  replace.sh
Engine/Core/: Audio.cpp  Core.cpp  Core.h  Core.hpp  Engine copy 2.cpp  Engine copy.cpp  Engine.cpp  Engine.hpp  Entity.cpp  Entity.hpp  Events.cpp  Events.h  Events.hpp  Filesystem.cpp  Filesystem.hpp  LoD.cpp  LoD.hpp  Macros.hpp  Math.cpp  Math.hpp  PreviewProject.cpp  PythonLinkIssueWorkaround.cpp  Raycast.cpp  Raycast.hpp  RunGame.cpp  RunGame.h  RunGame.hpp  SaveLoad.cpp  SaveLoad.hpp  Textures.cpp  Textures.hpp  UUID.cpp  UUID.hpp  functions.h  functions.hpp  global_variables.cpp  global_variables.hpp  stressTest.cpp
Engine/Editor/AssetsExplorer/: AssetsExplorer.cpp  AssetsExplorer.h  AssetsExplorer.hpp  FileManipulation.cpp  FileManipulation.hpp  file_manipulation.h  file_manipulation.hpp
Engine/Editor/CodeEditor/: CodeEditor.cpp  CodeEditor.h  CodeEditor.hpp
Engine/Editor/EntitiesList/: EntitiesList.cpp  EntitiesList.h
Engine/Editor/Inspector/: Inspector.Button.cpp  Inspector.Camera.cpp  Inspector.Entity.cpp  Inspector.Light.cpp  Inspector.Material.cpp  Inspector.Text.cpp  Inspector.World.cpp  Inspector.cpp  Inspector.h  Inspector.hpp
Engine/Editor/MaterialEditor/: BaseMaterialDefinition.hpp  DynamicRule.hpp  Editor.cpp  Editor.hpp  Implementation.md  Inspector.cpp  Inspector.hpp  LayerStack.cpp  LayerStack.hpp  LivingMaterial.cpp  LivingMaterial.hpp  Mask.hpp  MaterialFile.cpp  MaterialFile.hpp  MaterialLayer.hpp  MaterialLibrary.cpp  MaterialLibrary.hpp  ShaderCache.cpp  ShaderCache.hpp  ShaderGenerator.cpp  ShaderGenerator.hpp  Toolbox.cpp  Toolbox.hpp  Viewport.cpp  Viewport.hpp
Engine/GUI/: Text.cpp
Engine/Lighting/: BRDF.cpp  BRDF.hpp  InitLighting.cpp  InitLighting.hpp  Shaders.cpp  Shaders.hpp  SurfaceMaterial.cpp  SurfaceMaterial.hpp  lights copy.h  lights.cpp  lights.h  lights.hpp  skybox.cpp  skybox.h  skybox.hpp
Engine/Physics/: InitPhysx.cpp  PhysicsManager.cpp  PhysicsManager.h  PhysicsManager.hpp
Engine/Plugins/: Loader.cpp  Loader.h  Loader.hpp  Scripting.cpp  Scripting.h  Scripting.hpp
Engine/Scripting/: functions.cpp  functions.hpp  math.cpp  math.hpp  time.cpp  time.hpp
Engine/Tests/: global_variables.cpp
Engine/Ui/: AssetsExplorer.cpp  AssetsExplorer.h  CodeEditor.cpp  CodeEditor.h  EntitiesList copy.cpp  EntitiesList.cpp  Inspector.cpp  Inspector.h  MaterialsNodeEditor.cpp  MenuBar.cpp  SceneEditor copy 2.cpp  SceneEditor copy 3.cpp  SceneEditor copy 4.cpp  SceneEditor copy.cpp  SceneEditor.cpp  Styles.cpp
GameBuilder/: builder.cpp  builder.hpp  gameSystem.cpp  include.h  makefile
ImGuiColorTextEdit (copy)/: TextEditor.cpp  TextEditor.h
Include/: custom.h
Install/: build_dependencies.bat  build_dependencies.sh  install.bat  install.sh
Sandbox/: README.md  imgui.ini  makefile
Sandbox/parenting/: parenting.cpp
TEST!/: Entity.cpp  Light.cpp  Makefile  globals.h  main  main.cpp
Templates/Maze/: project.json
assets/: model.fbx
build - Cópia/: cmake_install.cmake
demo game/: whatami.glsl
dependencies/src/: glad.c
exported_game/: ScriptData.h  encryptedScripts.json  project.json  run  run.bat  scripts.json  whatami.glsl  whereami.glsl
exported_game/libs/: libswresample.so.4
exported_game/shaders/: cubemap.fs  downsampler.glsl  lighting_fragment.glsl  lighting_vertex.glsl  whatami.glsl
game/: hi.py  test.py
game/dorinha/: helloWorld.cpp
imgui/: a.py  my_enum.h
include/: ImNodes.h  config.h  custom.h  raymath_operators.h  rcamera.h  rlImGui.cpp  rlights.h
include/extras/: IconsFontAwesome6.h
install/: build_dependencies.bat  build_dependencies.sh  install.bat  install.sh
project/game/: coins collector.py  file1.mat  file1.py  file2.mat  file2.py  file3.mat  file4.mat  forest.py  hello.py  hi.py  hwllo world.mat  monster.py  player.py  stress.py  terrain.mtl  test.py
project/themes/: .theme
resources/shaders/: bitonic_sort.comp  command_gen.comp  cube.frag  cube.vert  cull.comp  depth_debug.frag  depth_debug.vert  depth_prepass.frag  depth_prepass.vert  hiz_mipmap.comp  large_object_command_gen.comp  large_object_cull.comp  large_object_sort.comp  opaque_sort.comp  red.frag  text.frag  text.vert  transform.comp  transparent.frag  transparent_command_gen.comp  transparent_cull.comp
src/Editor/: Application.cppm  CMakeLists.txt  main.cpp
src/Editor/Application/: Application.cpp  Application.cppm
src/Engine/: CMakeLists.txt  Camera.cpp  Camera.cppm  Engine.cpp  Engine.cppm  GLM.cppm  Input.cpp  Input.cppm  Mesh.cpp  Mesh.cppm  Model.cpp  Model.cppm  Renderer.cpp  Renderer.cppm  Scene.cpp  Scene.cppm  Shader.cpp  Shader.cppm  engine.cpp  engine.cppm
src/Engine/Asset/: AssetManager.cpp  AssetManager.cppm
src/Engine/Input/: Input.cpp  Input.cppm
src/Engine/Log/: Log.cpp  Log.cppm  Log.hpp
src/Engine/Render/: Camera.cpp  Camera.cppm  Component.cppm  DESIGN.md  Entity.cppm  Mesh.cpp  Mesh.cppm  Model.cpp  Model.cppm  Renderer.cpp  Renderer.cppm  Scene.cpp  Scene.cppm  SceneDatabase.cppm  Shader.cpp  Shader.cppm  ShaderManager.cpp  ShaderManager.cppm
src/Engine/UI/: Manager.cpp  Manager.cppm  Text.cpp  Text.cppm
(+149 files in other folders)
